# yugo-scraper

./: .gitignore  LICENSE  README.md  config.ini  config.sample.yaml  console_ui.py  main.py  pyproject.toml  requirements.txt  yugo_api_scraper.py
.github/workflows/: main.yml
student_rooms/: __init__.py  cli.py  matching.py
student_rooms/models/: config.py
student_rooms/notifiers/: base.py  webhook.py
student_rooms/providers/: aparto.py  base.py  yugo.py
tests/: test_aparto.py  test_config.py  test_matching.py
