[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-rooms-cli"
version = "1.1.0"
description = "Multi-provider student accommodation finder and monitor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gonzalo López Gil", email = "gonzalo.lopez.gil@gmail.com"},
]
keywords = ["student", "accommodation", "housing", "monitor", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
student-rooms = "student_rooms.cli:main"

[project.urls]
Homepage = "https://github.com/gonzalopezgil/student-rooms-cli"
Repository = "https://github.com/gonzalopezgil/student-rooms-cli"
Issues = "https://github.com/gonzalopezgil/student-rooms-cli/issues"

[tool.setuptools.packages.find]
include = ["student_rooms*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
